--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,91 +1,73 @@
-name: Web Build + Deployment to GitHub Pages 
+# For more info on Python, GitHub Actions, and Azure App Service 
+# please head to https://aka.ms/python-webapps-actions
+
+name: Build and deploy Django app to Azure App Service
 
 on:
-  # Runs on push to any of the below branches
   push:
     branches: 
       - master
-      - main
-  # Runs on pull request events that target one of the below branches
-  pull_request:
-    branches: 
-      - master
-      - main
-
-  # Allows you to run this workflow manually from the Actions tab of the repository
-  workflow_dispatch:
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 env:
-  # https://flet.dev/docs/publish#versioning
-  BUILD_NUMBER: 1
-  BUILD_VERSION: 1.0.0
-  PYTHON_VERSION: 3.12.2
-  FLUTTER_VERSION: 3.24.0
-  
+  WEBAPP_NAME: 'my-python-app'  # Replace with the name of your Azure web app
+
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v2
 
-    - name: Setup Python ${{ env.PYTHON_VERSION }}
+    - name: Setup Python version
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ env.PYTHON_VERSION }}
+        python-version: 3.8
 
-    - name: Install Python Dependencies
+    - name: Create and start virtual environment
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python3 -m venv venv
+        source venv/bin/activate
+
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+
+    - name: Collect static
+      run: python manage.py collectstatic
+
+    - name: Run tests
+      run: python manage.py test
+    
+    - name: Upload artifact for deployment jobs
+      uses: actions/upload-artifact@v2
+      with:
+        name: python-app
+        path: |
+          . 
+          !venv/
   
-    - name: Setup Flutter ${{ env.FLUTTER_VERSION }}
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: ${{ env.FLUTTER_VERSION }}
-
-    - name: Flet Build Web
-      run: |
-            echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}, USER: ${GITHUB_REPOSITORY%/*}, PROJECT_BASE_URL: ${GITHUB_REPOSITORY#*/}"
-            flutter config --no-analytics
-            flet build web --base-url ${GITHUB_REPOSITORY#*/} --route-url-strategy hash
-
-    - name: Upload Artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        name: web-build-artifact  # the name of the artifact
-        path: build/web
-
-  deploy:
-    needs: build  # wait for the "build" job to get done before executing this "deploy" job
-
+  deploy-to-webapp:
+    needs: build-and-test
     runs-on: ubuntu-latest
 
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-
-    # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-      
     steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-        
-      - name: Deploy to GitHub Pages 🚀
-        if: github.event_name == 'push'  # deploy only on push
-        id: deployment
-        uses: actions/deploy-pages@v4.0.5
+      - uses: actions/download-artifact@v2
         with:
-          artifact_name: web-build-artifact
-        
+          name: python-app
+          path: .
+      
+      - name: Log in to Azure CLI
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_SERVICE_PRINCIPAL }}
+    
+      - name: Disable static collection and set migration command on App Service
+        uses: Azure/appservice-settings@v1
+        with:  
+          app-name: ${{ env.WEBAPP_NAME }}
+          app-settings-json: '[{ "name": "DISABLE_COLLECTSTATIC", "value": "true" }, { "name": "POST_BUILD_COMMAND",  "value": "python manage.py makemigrations && python manage.py migrate" }, { "name": "SCM_DO_BUILD_DURING_DEPLOYMENT", "value": "true" }, { "name": "DJANGO_ENV", "value": "production"}]'
+
+      - name: Deploy to App Service
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.WEBAPP_NAME}}
+
